--- a/Reading data from the web.Rmd
+++ b/Reading data from the web.Rmd
@@ -155,6 +155,7 @@ BRFSS ; Behavioral Risk Factors: Selected Metropolitan Area Risk Trends (SMART) 
 brfss_2010 =  
   GET("https://chronicdata.cdc.gov/resource/acme-vg9e.csv",
       query = list("$limit" = 5000)) |> 
+  #By default, the CDC API limits data to the first 1000 rows.
   content("parsed")
 ```
 
@@ -169,4 +170,4 @@ pokemon[[4]]
 ```
 
 
-By default, the CDC API limits data to the first 1000 rows. 
+ 
